--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/serve-static": "^5.0.3",
     "@nestjs/swagger": "^11.0.6",
+    "axios": "^1.8.2",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
