--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-ZALO_APP_ID = '1245263641202768423'
-ZALO_SECRET_KEY = 'EGWTK767Y9F2GWD8Ujd6'
-DB_HOST = '172.16.0.91'
-DB_USERNAME = 'sa'
-DB_PASSWORD = 'salnt123'
-DB_NAME = 'HIS_DATA'
+ZALO_APP_ID = ''
+ZALO_SECRET_KEY = ''
+DB_HOST = ''
+DB_USERNAME = ''
+DB_PASSWORD = ''
+DB_NAME = ''
