--- a/.gitignore
+++ b/.gitignore
@@ -37,9 +37,9 @@ lerna-debug.log*
 
 # dotenv environment variable files
 .env
-.env.development.local
+.env.dev.local
 .env.test.local
-.env.production.local
+.env.prod.local
 .env.local
 
 # temp directory
