--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
+    "build": "nest build",
+    "start": "node server.js",
     "dev": "cross-env NODE_ENV=development npm run start",
     "prod": "cross-env NODE_ENV=production npm run start",
-    "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
