--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/swagger": "^11.0.6",
     "@nestjs/typeorm": "^11.0.0",
     "axios": "^1.8.2",
+    "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.7",
     "cross-env": "^7.0.3",
     "mssql": "^11.0.1",
