--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@nestjs/typeorm": "^11.0.0",
     "axios": "^1.8.2",
     "class-validator": "^0.14.1",
+    "cookie": "^1.0.2",
     "cookie-parser": "^1.4.7",
     "cross-env": "^7.0.3",
     "mssql": "^11.0.1",
