--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "cookie": "^1.0.2",
     "cookie-parser": "^1.4.7",
     "cross-env": "^7.0.3",
+    "googleapis": "^148.0.0",
     "mssql": "^11.0.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
