--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,5 +17,9 @@
     "noImplicitAny": false,
     "strictBindCallApply": false,
     "noFallthroughCasesInSwitch": false
-  }
+  },
+  "include": [
+    "src/**/*.ts",
+    "src/config/**/*" // Bao gồm thư mục config
+  ]
 }
