--- a/web.config
+++ b/web.config
@@ -1,17 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <system.webServer>
+
+    <!-- Thêm custom header cho SSE -->
+    <httpProtocol>
+      <customHeaders>
+        <add name="Cache-Control" value="no-cache" />
+        <add name="X-Accel-Buffering" value="no" />
+        <add name="Connection" value="keep-alive" />
+      </customHeaders>
+    </httpProtocol>
+
     <handlers>
       <add name="iisnode" path="server.js" verb="*" modules="iisnode"/>
     </handlers>
 
     <rewrite>
       <rules>
+        <!-- Cho phép static file -->
         <rule name="Static Files" stopProcessing="true">
           <match url="^static/(.*)$"/>
           <action type="Rewrite" url="/static/{R:1}"/>
         </rule>
 
+        <!-- Nếu là file notification/sse thì không rewrite về server.js -->
+        <rule name="Allow SSE notification/sse" stopProcessing="true">
+          <match url="^notification/sse$" />
+          <action type="None" />
+        </rule>
+
+        <!-- Các route khác rewrite về server.js -->
         <rule name="Rewrite to server.js">
           <conditions>
             <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="True"/>
@@ -21,6 +39,7 @@
       </rules>
     </rewrite>
 
+    <!-- Để môi trường node là production -->
     <iisnode node_env="production"/>
   </system.webServer>
 </configuration>
