--- a/web.config
+++ b/web.config
@@ -1,26 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <system.webServer>
+
     <handlers>
-      <add name="iisnode" path="server.js" verb="*" modules="iisnode"/>
+      <add name="iisnode" path="server.js" verb="*" modules="iisnode" />
     </handlers>
 
     <rewrite>
       <rules>
         <rule name="Static Files" stopProcessing="true">
-          <match url="^static/(.*)$"/>
-          <action type="Rewrite" url="/static/{R:1}"/>
+          <match url="^static/(.*)$" />
+          <action type="Rewrite" url="/static/{R:1}" />
         </rule>
 
         <rule name="Rewrite to server.js">
           <conditions>
-            <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="True"/>
+            <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="True" />
           </conditions>
-          <action type="Rewrite" url="server.js"/>
+          <action type="Rewrite" url="server.js" />
         </rule>
       </rules>
     </rewrite>
 
-    <iisnode node_env="production"/>
+    <iisnode 
+      node_env="production" 
+      debuggingEnabled="false" 
+      loggingEnabled="true" 
+      devErrorsEnabled="false"
+      flushResponse="true"
+    />
+
+    <staticContent>
+      <mimeMap fileExtension=".event-stream" mimeType="text/event-stream" />
+    </staticContent>
+
+    <httpProtocol>
+      <customHeaders>
+        <add name="Cache-Control" value="no-cache" />
+      </customHeaders>
+    </httpProtocol>
+
   </system.webServer>
 </configuration>
