--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/serve-static": "^5.0.3",
     "@nestjs/swagger": "^11.0.6",
     "@nestjs/typeorm": "^11.0.0",
+    "@nestjs/websockets": "^11.1.3",
     "axios": "^1.8.2",
     "class-validator": "^0.14.1",
     "cookie": "^1.0.2",
@@ -43,7 +44,8 @@
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.21",
     "winston": "^3.17.0",
-    "winston-daily-rotate-file": "^5.0.0"
+    "winston-daily-rotate-file": "^5.0.0",
+    "ws": "^8.18.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
