--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "cross-env": "^7.0.3",
     "crypto": "^1.0.1",
     "googleapis": "^148.0.0",
+    "jsep": "^1.4.0",
     "mssql": "^11.0.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
